--- a/wwe.html
+++ b/wwe.html
@@ -1,5 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
-    <script src="file:///D:/software list/afarme/aframe-master/dist/aframe-master.min.js"></script>
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
    </head>
    <body class="a-body ">
     <a-scene class="fullscreen" inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui=""><canvas class="a-canvas" data-aframe-canvas="true" width="150" height="75"></canvas>
